<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="PLCopenCallGroupType" Id="{d3dcb7f9-fdae-4639-b5ca-cb80fdcb3095}">
    <Declaration><![CDATA[TYPE
PLCopenCallGroupType :
STRUCT
  Execute : BOOL;
  Execute_ : BOOL;
  Command : IPLCopenCommand;
  Fallback : PLCopenStatusBase;
  ResponseRequired : BOOL;
  isDone : BOOL;
  isAbort : BOOL;
  isError : BOOL;
  isBusy : BOOL;
  isWorking : BOOL;
  Commands : ARRAY[0..GVLTcCommando.MAX_RELATED_GROUPS] OF PLCopenCall;
  SyncAbort : BOOL;
  SyncError : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>